--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "07-restserver",
-  "version": "1.0.0",
-  "description": "Rest Server",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Daniel Echeverry",
-  "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4"
-  }
+    "name": "07-restserver",
+    "version": "1.0.0",
+    "description": "Rest Server",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server/server.js",
+        "nodemon": "nodemon server/server.js"
+    },
+    "author": "Daniel Echeverry",
+    "license": "MIT",
+    "dependencies": {
+        "body-parser": "^1.18.3",
+        "express": "^4.16.4"
+    }
 }
